tests/good/nat_num_0.ppl
-- Tests whether Nats are accepted as inputs for functions

define num_id = \num. num;

num_id 2