tests/bad/nat_num_bad_0.ppl
-- Tests whether negative numbers are allowed as function arguments (should not be)

define num_id = \num. num;

num_id -2